Quartz sync: Jun 11, 2024, 7:12 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-8-VL/FSK-8VL-11-06-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-8-VL/FSK-8VL-11-06-2024.md
@@ -7,7 +7,7 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema:
 Benötigte Zeit:
 date created: Tuesday, 11. June 2024, 18:47
-date modified: Tuesday, 11. June 2024, 18:50
+date modified: Tuesday, 11. June 2024, 19:11
 ---
 
 > [!summary] Zusammenfassung Vorabzusammenfassung
@@ -21,7 +21,7 @@ date modified: Tuesday, 11. June 2024, 18:50
 >   - **Turing-Maschinen**: Allgemeine Turing-Maschinen für Typ 0 und linear platzbeschränkte Turing-Maschinen für Typ 1.
 >   - **Vergleich zu Kellerautomaten**: Turing-Maschinen haben ein unendlich großes Band und können darauf lesen und schreiben sowie den Kopf bewegen, während Kellerautomaten nur von oben in den Stack zugreifen können.
 
-# Einführung in Turing-Maschinen
+# VL0-8a Einführung in Turing-Maschinen
 
 Willkommen zur Vorlesung "Formale Sprachen und Komplexität" und "Theoretische Informatik für Medieninformatiker". Nachdem wir die Typ 3 Sprachen, also die regulären Sprachen, und das entsprechende Maschinenmodell, die endlichen Automaten, behandelt haben, sowie die Typ 2 Sprachen, also die kontextfreien Sprachen, und das dazugehörige Automatenmodell, die Kellerautomaten, kommen wir nun zu den Typ 1 und Typ 0 Sprachen der Chomsky-Hierarchie.
 
@@ -97,9 +97,352 @@ Das bedeutet, die Funktion liefert eine Menge von möglichen Tripeln. Die Maschi
 
 ### Konfigurationen
 
-Um den Ablauf einer Turing-Maschine zu beschreiben, verwenden wir Konfigurationen. Eine Konfiguration ist ein Wort aus $\Gamma^* \times Z \times \Gamma^*$.
+Um den Ablauf einer Turing-Maschine zu beschreiben, verwenden wir Konfigurationen. Eine Konfiguration ist ein Wort aus $\Gamma^* \times Z \times \Gamma^*$. Das bedeutet, eine Konfiguration gibt den aktuellen Zustand der Turing-Maschine und den Inhalt des Bandes sowie die Position des Schreiblesekopfes an. Sie wird verwendet, um den aktuellen Stand der Berechnung zu beschreiben.
 
-Das bedeutet, eine Konfiguration gibt den aktuellen Zustand der Turing-Maschine und den Inhalt des Bandes sowie die Position des Schreiblesekopfes an. Sie wird verwendet, um den aktuellen Stand der Berechnung zu beschreiben.
+## Beispiel einer Konfiguration
+
+Eine Konfiguration der Form $WZW'$ bedeutet, dass die Turing-Maschine im Zustand $Z$ ist, auf dem Band steht das Wort $WW'$, und links und rechts davon sind nur Blank-Symbole. Der Schreiblesekopf steht auf dem ersten Symbol von $W'$. Das $Z$ wird zwischen $W$ und $W'$ geschrieben, weil der Kopf auf dem ersten Symbol von $W'$ steht.
+
+### Startkonfiguration
+
+Die Startkonfiguration einer Turing-Maschine für ein Eingabewort $W$ ist der Startzustand $Z_0$ und das Wort $W$. Wenn das Eingabewort das leere Wort ist, verwenden wir ein Blank-Symbol. Die Startkonfiguration für das leere Wort ist also $Z_0 \text{Blank}$.
+
+### Transitionsrelation
+
+Die Transitionsrelation definiert die Übergänge zwischen den Konfigurationen der Turing-Maschine. Diese Übergänge hängen von der Zustandsüberführungsfunktion $\delta$ ab.
+
+#### Beispiele für die Transitionsrelation
+
+1. **Neutraler Übergang (N):**
+
+   - **Vorher:** Das Band enthält $B_1 B_2 \ldots B_M A_1 A_2 \ldots A_N$.
+   - **Nachher:** Das Band enthält $B_1 B_2 \ldots B_M C A_2 \ldots A_N$. Der Schreiblesekopf bleibt auf dem Symbol $C$.
+   - **Zustandsänderung:** Von Zustand $Z$ zu $Z'$.
+
+2. **Übergang nach links (L):**
+
+   - **Vorher:** Das Band enthält $B_1 B_2 \ldots B_M A_1 A_2 \ldots A_N$.
+   - **Nachher:** Das Band enthält $B_1 B_2 \ldots B_{M-1} C A_2 \ldots A_N$. Der Schreiblesekopf bewegt sich nach links auf $B_M$.
+   - **Zustandsänderung:** Von Zustand $Z$ zu $Z'$.
+
+3. **Übergang nach rechts (R):**
+
+   - **Vorher:** Das Band enthält $B_1 B_2 \ldots B_M A_1 A_2 \ldots A_N$.
+   - **Nachher:** Das Band enthält $B_1 B_2 \ldots B_M C A_2 \ldots A_N$. Der Schreiblesekopf bewegt sich nach rechts auf $A_2$.
+   - **Zustandsänderung:** Von Zustand $Z$ zu $Z'$.
+
+4. **Spezialfall (R) am Ende des Wortes:**
+   - **Vorher:** Das Band enthält
+
+$B_1 B_2 \ldots B_M A_1 \text{Blank}$.
+
+- **Nachher:** Das Band enthält $B_1 B_2 \ldots B_M C \text{Blank}$. Der Schreiblesekopf bewegt sich nach rechts auf das Blank-Symbol.
+- **Zustandsänderung:** Von Zustand $Z$ zu $Z'$.
+
+5. **Spezialfall (L) am Anfang des Wortes:**
+   - **Vorher:** Das Band enthält $\text{Blank} B_1 B_2 \ldots B_M A_1$.
+   - **Nachher:** Das Band enthält $\text{Blank} C B_1 B_2 \ldots B_M A_1$. Der Schreiblesekopf bewegt sich nach links auf das Blank-Symbol.
+   - **Zustandsänderung:** Von Zustand $Z$ zu $Z'$.
+
+### Akzeptierte Sprache einer Turing-Maschine
+
+Die akzeptierte Sprache einer Turing-Maschine $M = (Z, \Sigma, \Gamma, \delta, Z_0, \text{Blank}, E)$ ist die Menge aller Worte $W \in \Sigma^*$, für die es eine Konfiguration $U Z V$ gibt, wobei $U$ und $V$ Worte über dem Bandalphabet sind und $Z$ ein Endzustand ist. Die Startkonfiguration ist $Z_0 W$. Das bedeutet, dass die Turing-Maschine $M$ das Wort $W$ akzeptiert, wenn sie von der Startkonfiguration $Z_0 W$ in eine Konfiguration $U Z V$ übergehen kann, wobei $Z$ ein Endzustand ist.
+
+### Triviale Beispiele
+
+1. **Akzeptiert alle Eingaben:**
+
+   - **Definition:** $M = (Z, \Sigma, \Gamma, \delta, Z_0, \text{Blank}, E)$, wobei $Z_0 \in E$.
+   - **Erklärung:** Die Turing-Maschine akzeptiert jede Eingabe sofort, ohne Berechnung durchzuführen.
+
+2. **Akzeptiert keine Eingaben:**
+   - **Definition:** $M = (Z, \Sigma, \Gamma, \delta, Z_0, \text{Blank}, \emptyset)$.
+   - **Erklärung:** Die Turing-Maschine akzeptiert keine Eingabe, da es keine Endzustände gibt.
+
+### Zustandsgraph
+
+Der Zustandsgraph einer Turing-Maschine zeigt die Zustände und Übergänge zwischen ihnen. Jede Kante im Graph ist beschriftet mit $A : B, X$, wobei:
+
+- $A$ das gelesene Bandsymbol ist.
+- $B$ das ersetzte Bandsymbol ist.
+- $X$ die Bewegungsrichtung des Schreiblesekopfes ist (L = links, R = rechts, N = neutral).
+
+### Beispielzustandsgraph
+
+Ein Beispiel aus dem Schöning-Buch zeigt eine Turing-Maschine mit vier Zuständen:
+
+- **Zustände:** $Z_0, Z_1, Z_2, Z_3$.
+- **Eingabealphabet:** $\{0, 1\}$.
+- **Bandalphabet:** $\{0, 1, \text{Blank}\}$.
+- **Startzustand:** $Z_0$.
+- **Blank-Symbol:** $\text{Blank}$.
+- **Endzustand:** $Z_3$.
+
+Übergänge:
+
+- $\delta(Z_0, \text{Blank}) = (Z_1, \text{Blank}, L)$
+- $\delta(Z_0, 0) = (Z_0, 0, R)$
+- $\delta(Z_0, 1) = (Z_0, 1, R)$
+
+## Übergänge in Turing-Maschinen
+
+Diese Übergänge zeigen, dass die Turing-Maschine im Zustand $Z_0$ nach rechts rattert, bis sie ein Blank-Symbol erreicht. Dann wechselt sie in den Zustand $Z_1$ und bewegt den Kopf nach links. Im Zustand $Z_1$ ersetzt sie eine 1 durch eine 0 und verbleibt in $Z_1$ oder ersetzt eine 0 durch eine 1 und wechselt in den Zustand $Z_2$.
+
+- **Rattern nach rechts**: Der Kopf bewegt sich nach rechts, bis ein Blank-Symbol erreicht wird.
+- **Zustandswechsel zu $Z_1$**: Bei Erreichen des Blank-Symbols wechselt der Zustand zu $Z_1$ und der Kopf bewegt sich nach links.
+- **Ersetzen von Symbolen in $Z_1$**:
+  - Ersetzt eine 1 durch eine 0 und bleibt in $Z_1$.
+  - Ersetzt eine 0 durch eine 1 und wechselt zu $Z_2$.
+
+## Beispielablauf
+
+Wir betrachten eine Turing-Maschine mit der Anfangskonfiguration $Z_0 0111$. Das Band enthält die Zeichenkette 00111, gefolgt von unendlich vielen Blank-Symbolen. Der Kopf steht auf der ersten Null und die Maschine ist im Zustand $Z_0$.
+
+1. **Erster Schritt**:
+
+   - Zustand: $Z_0$
+   - Gelesenes Symbol: 0
+   - Aktion: 0 schreiben, Kopf nach rechts bewegen
+   - Neue Konfiguration: $Z_0 0111$
+   - Der Kopf steht nun auf der ersten 1.
+
+2. **Weitere Schritte in $Z_0$**:
+
+   - Der Kopf bewegt sich weiter nach rechts und ersetzt die gelesenen 1 durch 1, bis er auf das Blank-Symbol trifft.
+   - Neue Konfiguration nach mehreren Schritten: $Z_0 0011\_$
+   - Zustandwechsel zu $Z_1$:
+     - Blank-Symbol bleibt unverändert.
+     - Kopf bewegt sich nach links.
+     - Neue Konfiguration: $Z_1 0011\_$
+     - Der Kopf steht nun auf der letzten 1.
+
+3. **Schritte in $Z_1$**:
+
+   - Zustand: $Z_1$
+   - Gelesenes Symbol: 1
+   - Aktion: 1 durch 0 ersetzen, Kopf nach links bewegen
+   - Neue Konfiguration: $Z_1 0010\_$
+   - Der Kopf steht auf der zweiten 1.
+
+4. **Übergang zu $Z_2$**:
+
+   - Gelesenes Symbol: 0
+   - Aktion: 0 durch 1 ersetzen, Zustandwechsel zu $Z_2$
+   - Neue Konfiguration: $Z_2 0100\_$
+   - Der Kopf steht auf der ersten 0.
+
+5. **Verbleib in $Z_2$ und Abschluss**:
+
+   - Zustand: $Z_2$
+   - Gelesenes Symbol: 0
+   - Aktion: 0 bleibt unverändert, Kopf nach links bewegen
+   - Neue Konfiguration: $Z_2 0100\_$
+   - Der Kopf steht auf der ersten 1.
+
+6. **Abschluss im Zustand $Z_3$**:
+   - Gelesenes Symbol: 0
+   - Aktion: Kopf bleibt auf der 0, Zustandwechsel zu $Z_3$
+   - Endkonfiguration: $Z_3 0100\_$
+   - Die Maschine akzeptiert den Zustand und beendet die Berechnung.
+
+## Linear beschränkte Turing-Maschinen (LBAs)
+
+LBAs sind eine Variante der Turing-Maschinen, bei denen der Schreib-Lese-Kopf den Bereich der Eingabe auf dem Band nicht verlassen darf. Die Turing-Maschine bleibt innerhalb des Bereichs, der durch die Eingabe definiert ist.
+
+### Definition und Funktion
+
+- **Begrenzter Bereich**: Der Kopf darf den Bereich der Eingabe nicht verlassen.
+- **Markierung des Endes**: Das Ende der Eingabe wird durch ein markiertes Symbol (z.B. $\hat{A}_m$) gekennzeichnet.
+- **Markierung des Anfangs**: Der linke Rand ist am Anfang nicht markiert, kann aber von der Maschine markiert werden.
+- **Notationsweise**: Wenn $\Sigma$ das Eingabealphabet ist, enthält die markierte Kopie $\hat{\Sigma}$ die gleichen Symbole, jedoch mit einem Hütchen (z.B. $\hat{A}_1$ bis $\hat{A}_n$).
+
+### Beispiel für eine LBA
+
+Ein LBA verarbeitet die Eingabe $A_1A_2 \ldots A_{m-1}\hat{A}_m$ und bleibt innerhalb dieser Grenzen. Der Zustand und die Übergänge sind so definiert, dass der Kopf niemals außerhalb des Bereichs wandert.
+
+### Akzeptierte Sprache
+
+- **Kontextsensitiv**: LBAs erkennen genau die kontextsensitiven Sprachen (Typ-1-Sprachen).
+- **Erreichbare Zustände**: Für jede Eingabe $A_1A_2 \ldots A_m$ ist die Anzahl der Symbole auf dem Band stets begrenzt durch die Länge der Eingabe.
+
+Der Satz von Coroda besagt, dass die kontextsensitiven Sprachen genau von den LBAs erkannt werden. Dies wird in speziellen Vorlesungen wie FSK bewiesen, während TIMI-Zuhörer diese Aussage als gegeben hinnehmen müssen. Die Idee des Beweises beinhaltet, dass der LBA alle Wörter einer bestimmten Länge generiert und prüft, ob das gegebene Wort abgeleitet werden kann.
+
+## Einschränkungen bei Produktionsregeln
+
+Die Produktionsregeln dürfen nicht schrumpfen, was sicherstellt, dass Wörter nicht länger als die Zielwortlänge $W$ werden. Ein Wort, das über die Länge $W$ hinausgeht, bedeutet, dass die Satzform zu groß wird und nicht kleiner wird.
+
+## Linear beschränkte Automaten (LBA)
+
+- **Modell für Typ-1-Sprache**: LBAs sind ein Modell für kontextsensitive Sprachen.
+- **Konstruktion der Grammatik**: Eine Grammatik muss konstruiert werden, die den Ablauf von LBAs oder Turing-Maschinen simuliert.
+- **Unterschiede zu allgemeinen Turing-Maschinen**: Bei allgemeinen Turing-Maschinen können nicht-deterministische Maschinen durch deterministische simuliert werden, indem alle Möglichkeiten nacheinander durchprobiert werden.
+
+## Turing-Maschinen in der Chomsky-Hierarchie
+
+- **Typ-0-Sprachen**: Beliebige Turing-Maschinen.
+- **Typ-1-Sprachen**: Linear beschränkte Turing-Maschinen (nicht deterministisch).
+- **Typ-2-Sprachen**: Nicht-deterministische Kellerautomaten.
+- **Typ-3-Sprachen**: Endliche Automaten (deterministisch und nicht deterministisch).
+
+## Entscheidungsprobleme und Komplexität
+
+- **Wortproblem**:
+  - Typ-1 bis Typ-3: Entscheidbar.
+  - Typ-0: Nicht entscheidbar.
+- **Leerheitsproblem**:
+  - Typ-2 und Typ-3: Entscheidbar.
+  - Typ-1 und Typ-0: Nicht entscheidbar.
+- **Äquivalenzproblem**:
+  - Typ-3 und deterministisch kontextfrei: Entscheidbar.
+  - Typ-0, Typ-1, Typ-2: Nicht entscheidbar.
+- **Schnittproblem**:
+  - Nicht entscheidbar für deterministisch kontextfreie Sprachen.
+
+## Chomsky-Hierarchie
+
+- **Typ-0 (rekursiv aufzählbar)**: Beliebige Turing-Maschinen.
+- **Typ-1 (kontextsensitiv)**: Linear beschränkte Turing-Maschinen.
+- **Typ-2 (kontextfrei)**: Nicht-deterministische Kellerautomaten.
+- **Typ-3 (regulär)**: Endliche Automaten (deterministisch und nicht deterministisch).
+
+## Komplexität des Wortproblems
+
+- **Typ-3 (DFA)**: Lineare Komplexität.
+- **Typ-2 (Chomsky-Normalform)**: Kubische Komplexität.
+- **Typ-1**: Exponentielle Komplexität.
+- **Typ-0**: Nicht lösbar.
+
+## Wichtige Sprachen und Beispiele
+
+- **$A^nB^n$**: Typ-2, aber nicht Typ-3.
+- **Palindrome**: Typ-2, aber nicht deterministisch kontextfrei.
+- **$A^nB^nC^n$**: Typ-1, aber nicht Typ-2.
+- **Halteproblem**: Typ-0, aber nicht Typ-1.
+
+## Abschlusseigenschaften
+
+- **Reguläre Sprachen**: Abgeschlossen bezüglich Schnitt, Vereinigung, Komplement, Produkt und klinischem Abschluss.
+- **Deterministisch kontextfreie Sprachen**: Nur gegenüber Komplement abgeschlossen.
+- **Kontextfreie Sprachen**: Abgeschlossen gegenüber Vereinigung, Produkt und klinischem Abschluss.
+- **Kontextsensitive Sprachen**: Abgeschlossen gegenüber Schnitt, Vereinigung, Komplement, Produkt und klinischem Abschluss.
+- **Typ-0-Sprachen**: Abgeschlossen bezüglich Schnitt, Vereinigung, Produkt und klinischem Abschluss, aber nicht gegenüber Komplement.
+
+Die Turing-Maschine wird weiterhin ein zentrales Modell für die Untersuchung der Berechenbarkeit und Komplexität bleiben. Die TIMI-Zuhörer sollten sich mit diesem Modell vertraut machen, da es in den folgenden Vorlesungen intensiv genutzt wird.
+
+---
+
+# VL-08b
+
+> [!summary] Zusammenfassung Vorabzusammenfassung
+>
+> ## Deterministisch-kontextfreie Sprachen (Seite 1)
+>
+> - **Verwendung**: Untersuchung von deterministisch-kontextfreien Sprachen und deren Eigenschaften.
+> - **Funktionsweise**:
+>   - **Definition**: Deterministische Kellerautomaten (DPDA) akzeptieren Sprachen mit Endzuständen.
+>   - **Einschränkungen**: Epsilon-Übergänge sind nur erlaubt, wenn keine anderen Übergänge möglich sind.
+>   - **Eigenschaften**: Deterministisch-kontextfreie Sprachen können in linearer Zeit entschieden werden, sind unter Komplementbildung abgeschlossen, aber nicht unter Vereinigung und Schnitt.
+
+## Deterministisch-Kontextfreie Sprachen
+
+## Einführung
+
+Willkommen zur Vorlesung über Formale Sprachen und Komplexität sowie Theoretische Informatik für Medieninformatiker. Heute behandeln wir eine spezielle Klasse der kontextfreien Sprachen: die deterministisch-kontextfreien Sprachen. Diese Vorlesung wird kürzer sein als gewöhnlich, da wir einige Beweise auslassen und uns auf die Definitionen und grundlegenden Eigenschaften konzentrieren.
+
+## Deterministisch-Kontextfreie Sprachen (DCKS)
+
+### Definition
+
+Deterministisch-kontextfreie Sprachen (DCKS) sind kontextfreie Sprachen, die von deterministischen Kellerautomaten (DPDA) akzeptiert werden. Ein DPDA unterscheidet sich von einem allgemeinen Kellerautomaten (PDA) dadurch, dass er für jede Kombination von Zustand und Kellersymbol höchstens einen Übergang hat.
+
+Ein Kellerautomat mit Endzuständen ist formal definiert als ein 7-Tupel:
+
+$$
+ (Z, \Sigma, \Gamma, \Delta, Z_0, \text{Raute}, E)
+$$
+
+- **$Z$**: Menge der Zustände
+- **$ \Sigma $**: Eingabealphabet
+- **$ \Gamma $**: Kelleralphabet
+- **$ \Delta $**: Zustandsübergangsfunktion
+- **$ Z_0 $**: Startzustand
+- **$ \text{Raute} $**: Startsymbol im Keller
+- **$ E $**: Menge der Endzustände
+
+Ein DPDA ist deterministisch, wenn für alle Kombinationen von Zustand $Z$, Eingabesymbol $A$ und Kellersymbol $A$ gilt:
+
+$$
+ \Delta(Z, A, A) + \Delta(Z, Y, A) \leq 1
+$$
+
+Das bedeutet, es gibt höchstens einen Übergang für jede Kombination aus Zustand und Kellersymbol.
+
+### Akzeptanz durch Endzustände
+
+Deterministische Kellerautomaten akzeptieren Eingaben durch das Erreichen eines Endzustands und nicht durch einen leeren Keller. Epsilon-Übergänge sind erlaubt, jedoch nur, wenn keine anderen Übergänge verfügbar sind.
+
+### Beispiel einer deterministisch-kontextfreien Sprache
+
+Ein Beispiel für eine deterministisch-kontextfreie Sprache ist die Sprache:
+
+$$
+ L = \{ w \text{Dollar} w^R \mid w \in \{a, b\}^* \}
+$$
+
+Hier sind alle Wörter $w$, gefolgt von einem Dollarzeichen und dann dem umgekehrten Wort $w^R$, deterministisch kontextfrei. Ein DPDA kann diese Sprache akzeptieren, indem er den ersten Teil des Wortes im Keller speichert und im zweiten Teil vergleicht.
+
+## Eigenschaften deterministisch-kontextfreier Sprachen
+
+### Gutartige Eigenschaften
+
+Deterministisch-kontextfreie Sprachen (DCKS) haben mehrere wünschenswerte Eigenschaften:
+
+- **Lineare Zeitentscheidung**: Das Wortproblem für DCKS kann in linearer Zeit entschieden werden, da der DPDA deterministisch ist und daher für jede Eingabe genau eine Berechnung durchführt.
+- **Eindeutige Grammatiken**: Für jede durch einen DPDA akzeptierte Sprache gibt es eine eindeutige Grammatik.
+- **Abgeschlossenheit unter Komplementbildung**: Wenn eine Sprache durch einen DPDA akzeptiert wird, so wird auch ihr Komplement durch einen DPDA akzeptiert.
+
+### Nicht-Abgeschlossenheit
+
+Deterministisch-kontextfreie Sprachen sind jedoch nicht unter allen Operationen abgeschlossen:
+
+- **Vereinigung**: Die Vereinigung zweier deterministisch-kontextfreier Sprachen ist im Allgemeinen nicht deterministisch-kontextfrei.
+- **Schnitt**: Der Schnitt zweier deterministisch-kontextfreier Sprachen ist im Allgemeinen nicht deterministisch-kontextfrei.
+
+### Beweise der Nicht-Abgeschlossenheit
+
+Um zu zeigen, dass deterministisch-kontextfreie Sprachen nicht unter Schnitt und Vereinigung abgeschlossen sind, betrachten wir folgende Beweise:
+
+- **Nicht-Abgeschlossenheit unter Vereinigung und Schnitt**:
+  - Angenommen, deterministisch-kontextfreie Sprachen wären unter Vereinigung abgeschlossen. Dann wären sie auch unter Schnitt abgeschlossen, da der Schnitt als Komplement der Vereinigung der Komplemente ausgedrückt werden kann. Dies steht jedoch im Widerspruch zu unserem Wissen, dass der Schnitt nicht abgeschlossen ist.
+
+### Beispielsprachen
+
+- **Sprache $a^i b^i$**:
+  Diese Sprache ist deterministisch kontextfrei. Ein DPDA kann diese Sprache akzeptieren, indem er die $a$'s auf den Keller schreibt und mit den $b$'s vergleicht.
+- **Sprache $a^i b^i c^i$**:
+  Diese Sprache ist nicht deterministisch kontextfrei, da der DPDA nicht deterministisch entscheiden kann, wann er von den $a$'s zu den $b$'s wechseln soll.
+
+## Entscheidbarkeitsprobleme für kontextfreie Sprachen
+
+### Entscheidbare Probleme
+
+Einige wichtige Entscheidbarkeitsprobleme für kontextfreie Sprachen sind entscheidbar:
+
+- **Leerheitsproblem**: Gegeben eine kontextfreie Grammatik, ist die durch die Grammatik erzeugte Sprache leer? Dieses Problem ist entscheidbar.
+- **Endlichkeitsproblem**: Gegeben eine kontextfreie Grammatik, ist die durch die Grammatik erzeugte Sprache endlich? Auch dieses Problem ist entscheidbar.
+
+### Unentscheidbare Probleme
+
+Es gibt jedoch auch mehrere unentscheidbare Probleme für kontextfreie Sprachen:
+
+- **Äquivalenzproblem**: Es ist unentscheidbar, ob zwei kontextfreie Grammatiken die gleiche Sprache erzeugen.
+- **Schnittproblem**: Es ist unentscheidbar, ob der Schnitt zweier kontextfreier Sprachen leer ist.
+
+### Letzte Anmerkungen zu Entscheidbarkeitsfragen
+
+Der CYK-Algorithmus und andere Algorithmen für Typ-1-Sprachen haben gezeigt, dass das Wortproblem für kontextfreie Grammatiken entscheidbar ist. Diese Algorithmen arbeiten in polynomieller Zeit (kubische Zeit).
+
+In den folgenden Vorlesungen werden wir einige dieser Beweise detaillierter betrachten. Das nächste Video wird länger sein und weitere Beweise zu den Entscheidbarkeitsfragen liefern. Die dargestellten Konzepte sind entscheidend für das Verständnis der Struktur und Eigenschaften von formalen Sprachen, insbesondere im Kontext der theoretischen Informatik.
 
 <!-- DISQUS SCRIPT COMMENT START -->
 
